--- a/css/styles.css
+++ b/css/styles.css
@@ -16,15 +16,26 @@
   padding: 20px 0px 20px 0px;
 }
 
-.jumbotron{
-    padding: 70px 30px 70px 30px;
-    margin: 0px auto;
-    background: #9575cd;
-    color: floralwhite:
+.jumbotron {
+  padding: 70px 30px 70px 30px;
+  margin: 0px auto;
+  background: #9575cd;
+  color: floralwhite;
 }
 
 .address {
-    font-size: 80%;
-    margin: 0px;
-    color: #0f0f0f;
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
+}
+
+body {
+  padding-top: 50px;
+  z-index: 0;
+}
+.navbar-dark {
+  background-color: #512da8;
+}
+.fa {
+  padding: 5px;
 }
